--- a/ch01/ch01-02.html
+++ b/ch01/ch01-02.html
@@ -20,5 +20,6 @@
     <canvas id="webgl-canvas" width="800" height="600"
       >Your browser does not support the HTML5 canvas element.</canvas
     >
+    <script type="module" src="./main2.js"></script>
   </body>
 </html>
