--- a/ch01/ch01-04.html
+++ b/ch01/ch01-04.html
@@ -10,6 +10,8 @@
       type="image/png"
       href="/common/image/favicon.png"
     />
+    <link rel="stylesheet" href="../common/lib/normalize.css" />
+    <script type="text/javascript" src="../common/js/utils.js"></script>
     <style type="text/css">
       canvas {
         border: 5px dotted blue;
@@ -20,5 +22,6 @@
     <canvas id="webgl-canvas" width="800" height="600"
       >Your browser does not support the HTML5 canvas element.</canvas
     >
+    <script type="module" src="./main4.js"></script>
   </body>
 </html>
